--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 
 <script src="./lib/jquery-1.6.4.js"></script>
-<script src="./src/haili.combobox.js"></script>
+<script src="src/js/haili.combobox.js"></script>
 <script>
 
   $('#combobox').hailiCombobox({
