--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+
+  <link rel="stylesheet" href="./app/css/app.min.css" type="text/css">
+
   <style>
 
     * {
@@ -24,54 +27,6 @@
       float: left;
     }
 
-    /*combobox style*/
-    .haili-combobox {
-      padding: 4px;
-      position: relative;
-      top: 6px;
-      left: 3px;
-    }
-
-    .haili-combobox-body {
-      border: 1px solid #ccc;
-      min-width: 160px;
-      max-height: 200px;
-      height: 200px;
-      overflow: auto;
-      position: absolute;
-      display: none;
-      z-index: 10000;
-      font-family: 微软雅黑, sans-serif, arial;
-    }
-
-    .haili-combobox-body > .query,
-    .haili-combobox-body > .body {
-      padding: 6px;
-    }
-
-    .haili-combobox-body > .query > input {
-      border: 1px solid #ccc;
-      width: 92%;
-      height: 20px;
-      border-radius: 10px;
-      padding: 0 4px;
-    }
-
-    .haili-combobox-body > .body > ul {
-      list-style: none;
-    }
-
-    .haili-combobox-body > .body > ul li {
-      padding: 2px;
-    }
-
-    .haili-combobox-body >.body > ul li:hover {
-      background: #456789;
-      color: #fff;
-      cursor: pointer;
-    }
-
-
   </style>
 </head>
 <body>
@@ -91,7 +46,7 @@
 
 
 <script src="./lib/jquery-1.6.4.js"></script>
-<script src="src/js/haili.combobox.js"></script>
+<script src="./app/js/app.min.js"></script>
 <script>
 
   $('#combobox').hailiCombobox({
