--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="row">
       <div class="col-50">
         <div style="height: 500px; margin-top: 30px;">
-          <input type="text" id="combobox" class="haili-combobox">
+          <input type="text" id="combobox" class="haili-combobox" style="left:30px;top: 10px;">
         </div>
       </div>
 
